Adding code to genarte the embeddings